Fixed bug #41004 (minOccurs="0" and null class member variable)